--- a/style.css
+++ b/style.css
@@ -1,253 +1,508 @@
-   /* <style> */
-      :root {
-        --color-black: #111;
-        --color-white: #ffffff;
-        --color-primary: #10b981;
-        --pill-left: 0;
-        --pill-right: 0;
-      }
+/* <style> */
+:root {
+  --color-black: #111;
+  --color-white: #ffffff;
+  --color-primary: #10b981;
+  --pill-left: 0;
+  --pill-right: 0;
+}
 
-      body {
-        overflow-x: hidden;
-      }
-      .allura {
-        font-family: "Allura", cursive;
-      }
+body {
+  overflow-x: hidden;
+}
+.allura {
+  font-family: "Allura", cursive;
+}
 
-      @font-face {
-        font-family: "mazius";
-        src: url("mazius_display/MaziusDisplay/Mazius\ Display\ Extraitalic.otf")
-          format("opentype");
-      }
+@font-face {
+  font-family: "mazius";
+  src: url("mazius_display/MaziusDisplay/Mazius\ Display\ Extraitalic.otf")
+    format("opentype");
+}
 
-      @font-face {
-        font-family: "gilroy-bold";
-        src: url("gilroy-bold/Gilroy-Bold.ttf") format("opentype");
-      }
-      @font-face {
-        font-family: "gilroy";
-        src: url("gilroy-bold/Gilroy-Medium.ttf") format("opentype");
-      }
+@font-face {
+  font-family: "gilroy-bold";
+  src: url("gilroy-bold/Gilroy-Bold.ttf") format("opentype");
+}
+@font-face {
+  font-family: "gilroy";
+  src: url("gilroy-bold/Gilroy-Medium.ttf") format("opentype");
+}
 
-      .mazius {
-        font-family: "mazius";
-      }
+.mazius {
+  font-family: "mazius";
+}
 
-      .gilroy-bold {
-        font-family: "gilroy-bold";
-      }
+.gilroy-bold {
+  font-family: "gilroy-bold";
+}
 
-      .gilroy {
-        font-family: "gilroy";
-      }
+.gilroy {
+  font-family: "gilroy";
+}
 
-      .bg-primary {
-        background-color: var(--color-primary) !important;
-      }
+.bg-primary {
+  background-color: var(--color-primary) !important;
+}
 
-      .text-primary {
-        color: var(--color-primary) !important;
-      }
+.text-primary {
+  color: var(--color-primary) !important;
+}
 
-      /* Lenis Setup */
-      html.lenis,
-      html.lenis body {
-        height: auto;
-      }
+/* Lenis Setup */
+html.lenis,
+html.lenis body {
+  height: auto;
+}
 
-      .lenis.lenis-smooth {
-        scroll-behavior: auto;
-      }
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
 
-      .lenis.lenis-smooth [data-lenis-prevent] {
-        overscroll-behavior: contain;
-      }
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
 
-      .lenis.lenis-stopped {
-        overflow: hidden;
-      }
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
 
-      .lenis.lenis-scrolling iframe {
-        pointer-events: none;
-      }
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
 
-      :root {
-        --pill-left: 0px;
-        --pill-right: 0px;
-      }
+:root {
+  --pill-left: 0px;
+  --pill-right: 0px;
+}
 
-      #track3::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: var(--pill-left);
-        right: var(--pill-right);
-        background-color: black;
-        border-radius: 50px;
-        transition: all 0.25s ease-in-out;
-        z-index: 0;
-        height: 50px;
-        border: 3px solid #fff;
-      }
+#track3::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: var(--pill-left);
+  right: var(--pill-right);
+  background-color: black;
+  border-radius: 50px;
+  transition: all 0.25s ease-in-out;
+  z-index: 0;
+  height: 50px;
+  border: 3px solid #fff;
+}
 
-      #track3 .pill.active {
-        color: white;
-        font-weight: 600;
-      }
+#track3 .pill.active {
+  color: white;
+  font-weight: 600;
+}
 
-      .tab-pane {
-        display: none;
-      }
+.tab-pane {
+  display: none;
+}
 
-      .tab-pane.active {
-        display: block;
-      }
+.tab-pane.active {
+  display: block;
+}
 
-      /* Horizontal Scroll Section Styles */
-      .horizontal-container {
-        position: relative;
-        height: 100vh;
-        overflow: hidden;
-      }
+/* Horizontal Scroll Section Styles */
+.horizontal-container {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
 
-      .horizontal-scroller {
-        display: flex;
-        height: 100vh;
-        width: max-content;
-      }
+.horizontal-scroller {
+  display: flex;
+  height: 100vh;
+  width: max-content;
+}
 
-      .horizontal-section {
-        flex: 0 0 100vw;
-        height: 100vh;
-      }
+.horizontal-section {
+  flex: 0 0 100vw;
+  height: 100vh;
+}
 
-      /* Mobile optimization */
-      @media (max-width: 768px) {
-        .horizontal-container h1 {
-          font-size: 14vw;
-        }
+/* Mobile optimization */
+@media (max-width: 768px) {
+  .horizontal-container h1 {
+    font-size: 14vw;
+  }
 
-        .horizontal-container h2 {
-          font-size: 1.5rem;
-        }
+  .horizontal-container h2 {
+    font-size: 1.5rem;
+  }
 
-        .progress-counter {
-          font-size: 8rem;
-          bottom: 1rem;
-          right: 1rem;
-        }
-      }
+  .progress-counter {
+    font-size: 8rem;
+    bottom: 1rem;
+    right: 1rem;
+    font-weight: 700;
+  }
+}
 
-      .horizontal-intro,
-      .horizontal-hero-img,
-      .horizontal-about,
-      .horizontal-banner-img,
-      .horizontal-story,
-      .horizontal-outro {
-        width: 90vw;
-      }
+.horizontal-intro,
+.horizontal-hero-img,
+.horizontal-about,
+.horizontal-banner-img,
+.horizontal-story,
+.horizontal-outro {
+  width: 90vw;
+}
 
-      .horizontal-header,
-      .horizontal-concept-img {
-        width: 100vw;
-      }
+.horizontal-header,
+.horizontal-concept-img {
+  width: 100vw;
+}
 
-      .horizontal-intro {
-        padding: 2rem;
-        background-color: #000;
-        color: #f6f6f6;
-      }
+.horizontal-intro {
+  padding: 2rem;
+  background-color: #000;
+  color: #f6f6f6;
+}
 
-      .horizontal-header {
-        padding: 2rem;
-        background-color: #f4d35e;
-        color: #421c06;
-      }
+.horizontal-header {
+  padding: 2rem;
+  background-color: #f4d35e;
+  color: #421c06;
+}
 
-      .horizontal-about {
-        padding: 4rem 3rem 1rem 2rem;
-        background-color: #f95738;
-        color: #481107;
-      }
+.horizontal-about {
+  padding: 4rem 3rem 1rem 2rem;
+  background-color: #f95738;
+  color: #481107;
+}
 
-      .horizontal-story {
-        padding: 4rem 2rem 2rem 2rem;
-        background-color: #ee964b;
-        color: #3f170b;
-      }
+.horizontal-story {
+  padding: 4rem 2rem 2rem 2rem;
+  background-color: #ee964b;
+  color: #3f170b;
+}
 
-      .horizontal-outro {
-        background-color: #ebebd3;
-        color: #302418;
-        padding: 2rem;
-      }
+.horizontal-outro {
+  background-color: #ebebd3;
+  color: #302418;
+  padding: 2rem;
+}
 
-      .horizontal-about .row {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-      }
+.horizontal-about .row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
-      .horizontal-about .row p {
-        width: 50%;
-        margin-bottom: 1rem;
-      }
+.horizontal-about .row p {
+  width: 50%;
+  margin-bottom: 1rem;
+}
 
-      .horizontal-about .row .copy {
-        flex: 3;
-      }
+.horizontal-about .row .copy {
+  flex: 3;
+}
 
-      .horizontal-about .row .img {
-        flex: 3;
-        aspect-ratio: 7/5;
-        overflow: hidden;
-      }
+.horizontal-about .row .img {
+  flex: 3;
+  aspect-ratio: 7/5;
+  overflow: hidden;
+}
 
-      .horizontal-about .row .img img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+.horizontal-about .row .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-      /* Typography for horizontal section */
-      .horizontal-container h1 {
-        font-family: "Anton", sans-serif;
-        font-size: 10vw;
-        font-weight: 400;
-        text-transform: uppercase;
-        line-height: 1;
-        letter-spacing: -2px;
-        padding-top: 0.25rem;
-      }
+/* Typography for horizontal section */
+.horizontal-container h1 {
+  font-family: "Anton", sans-serif;
+  font-size: 10vw;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 1;
+  letter-spacing: -2px;
+  padding-top: 0.25rem;
+}
 
-      .horizontal-container h2 {
-        font-family: "Poppins", sans-serif;
-        font-size: 2.5rem;
-        font-weight: 700;
-      }
+.horizontal-container h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
 
-      .horizontal-container p {
-        font-family: "Poppins", sans-serif;
-        font-size: 1rem;
-        font-weight: 500;
-      }
+.horizontal-container p {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+}
 
-      .horizontal-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+.horizontal-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-      /* Progress Counter */
-      .progress-counter {
-        position: fixed;
-        bottom: 2rem;
-        right: 2rem;
-        color: white;
-        font-family: "Anton", sans-serif;
-        font-size: 3rem;
-        z-index: 100;
-        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-        pointer-events: none;
-      }
-    /* </style> */
+/* Progress Counter */
+.progress-counter {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  color: white;
+  font-family: "Anton", sans-serif;
+  font-size: 3rem;
+  z-index: 100;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+/* </style> */
+
+/* collection section  */
+/* Import Google Font 'Poppins' */
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
+
+/* Define CSS variables for common values */
+:root {
+  --background-color: #262626;
+  --text-color: #fff;
+  --primary-font: "gilroy";
+  --heading-font-size: 12vw;
+  --header-card-padding: 1.5rem;
+  --card-padding: 1.5rem;
+  --card-shadow: 0 -8px 15px rgba(0, 0, 0, 0.85);
+  --card-margin: 60px;
+  --mini-card-min-size: 300px;
+  --mini-card-border-radius: 16px;
+  --scrollbar-height: 4px;
+  --scrollbar-color: #666;
+  --scrollbar-bg: #000000;
+}
+
+/* Global resets and typography */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--primary-font);
+}
+
+/* body,
+html {
+  background-color: var(--background-color);
+  color: var(--text-color);
+} */
+
+a {
+  text-decoration: none;
+}
+
+/* Container for the entire page content */
+.page-wrap {
+  /* max-width: 1600px; */
+  margin: 0 auto;
+  padding: 0 60px;
+}
+
+/* Post sliders section */
+.post-sliders {
+  padding-top: calc(60px * 1.5);
+}
+  
+/* Section heading for post sliders */
+.section-heading {
+  font-weight: 800;
+  font-size: var(--heading-font-size);
+  margin-bottom: -5vw;
+}
+
+/* Main container for each post slider */
+.post-slider {
+  background: var(--background-color);
+  box-shadow: var(--card-shadow);
+  display: flex;
+  /* margin: 0 0 var(--card-margin) 0; */
+  padding: 0 32px 32px;
+  position: relative;
+}
+
+/* Header card for each slider */
+.post-slider-header {
+  color: var(--text-color);
+  margin-top: 2rem;
+  flex: 0 0 250px;
+  margin-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: var(--header-card-padding);
+  transform: translateY(-10px);
+  position: relative;
+}
+
+/* Border and background for the header card */
+.post-slider-header::before {
+  content: "";
+  background: linear-gradient(
+    130deg,
+    #ff7a18 0%,
+    #af002d 41.07%,
+    #319197 76.05%
+  );
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
+  z-index: 1;
+  border-radius: 12px;
+}
+
+/* Dark overlay for the header card */
+.post-slider-header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 2;
+  border-radius: 8px;
+}
+
+/* Styling for the text inside the header card */
+.header-card * {
+  color: var(--text-color);
+  position: relative;
+  z-index: 3;
+  font-size: 15px;
+  /* border-radius: 20px; */
+}
+
+/* Title inside the header card */
+.header-card-title {
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 1.1;
+  margin-bottom: 16px;
+}
+
+/* Grid container for mini cards */
+.mini-card-grid {
+  padding: 3rem 0 3rem 2rem;
+  display: flex;
+  overflow-x: scroll;
+  gap: 1rem;
+  position: relative;
+}
+
+/* Styling for each mini card */
+.mini-card-grid .mini-card {
+  min-width: var(--mini-card-min-size);
+  min-height: var(--mini-card-min-size);
+  box-shadow: -2rem 0 3rem -2rem #000;
+  padding: var(--card-padding);
+  border-radius: var(--mini-card-border-radius);
+  background: linear-gradient(85deg, #434343, #262626);
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+/* Mini card spacing except for the first one */
+.mini-card-grid .mini-card:not(:first-child) {
+  margin-left: -130px;
+  box-shadow: -3rem 0 3rem -2rem #000;
+}
+
+/* Styling for the time inside mini cards */
+.mini-card-grid .mini-card time {
+  display: block;
+  margin: 0 0 0.25rem 0;
+  color: #777;
+}
+
+/* Title inside the mini card */
+.mini-card-grid .mini-card-title {
+  font-size: 1.3rem;
+  margin: 0 0 1rem 0;
+  font-weight: 800;
+  letter-spacing: 0.03rem;
+}
+
+/* Links inside mini cards */
+.mini-card-grid .mini-card a {
+  color: var(--text-color);
+}
+
+/* Author row inside mini cards */
+.mini-card-grid .author-row {
+  display: grid;
+  grid-template-columns: 40px 1fr;
+  gap: 0.5rem;
+  align-items: center;
+  color: #565656;
+  line-height: 1.3;
+  padding-top: 0.5rem;
+}
+
+/* Avatar inside the author row */
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+/* Description inside mini cards */
+.mini-card-description {
+  display: block;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  color: #c0bb79;
+  font-size: 14px;
+}
+
+/* Hover effects for mini cards */
+.mini-card-grid .mini-card:hover ~ .mini-card {
+  transform: translateX(130px);
+}
+
+/* Custom scrollbar for mini card grid */
+.mini-card-grid {
+  overflow-x: auto;
+  background-repeat: no-repeat;
+  background-position: left center, right center, left center, right center;
+  background-size: 10px 100%, 10px 100%, 10px 100%, 10px 100%;
+  background-attachment: local, local, scroll, scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.mini-card-grid::-webkit-scrollbar {
+  height: var(--scrollbar-height);
+  background-color: var(--scrollbar-bg);
+}
+
+.mini-card-grid::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-color);
+  border-radius: 3px;
+}
+
+.mini-card-grid::-webkit-scrollbar-button {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  /* Mobile styles */
+  .page-wrap {
+    padding: 0px 20px;
+  }
+  .mini-card-grid .mini-card:not(:first-child) {
+    margin-left: -260px;
+  }
+
+  .mini-card-grid {
+    padding: 3rem 0 3rem 0rem;
+  }
+  .mini-card-grid .mini-card:hover ~ .mini-card {
+  transform: translateX(230px);
+}
+}
