--- a/style.css
+++ b/style.css
@@ -257,7 +257,6 @@ html.lenis body {
 /* Import Google Font 'Poppins' */
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
 
-
 /* .hero-heading{
   opacity: 0;
 } */
@@ -297,6 +296,104 @@ html.lenis body {
 /* Horizontal scroll elements */
 .horizontal-container {
   visibility: hidden;
+}
+
+/* nav css  */
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700'); */
+
+h1 {
+  margin: 0;
+}
+
+/* Replacing @mixin tr */
+
+.fs-menu-btn {
+  position: fixed;
+  z-index: 1000;
+  top: 30px;
+  right: 100px;
+  cursor: pointer;
+  letter-spacing: 5px;
+  font-weight: bold;
+}
+
+.fs-menu-btn:hover span:nth-child(2) {
+  width: 70px;
+}
+
+.fs-menu-btn:hover span:nth-child(3) {
+  width: 65px;
+  margin-right: -10px;
+}
+
+#fir {
+  display: block;
+  margin: 5px 0;
+  background: black;
+  width: 85px;
+  height: 5px;
+  transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.fs-menu-btn span {
+  display: block;
+  margin: 5px 0;
+  background: black;
+  width: 65px;
+  height: 5px;
+  transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.fs-menu-btn span:nth-child(3) {
+  width: 40px;
+  transition-delay: 0.1s;
+}
+
+/* skills css  */
+#simulation-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+#physics-canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+#eyes {
+  --size: clamp(64px, 30vi, 256px);
+  block-size: var(--size);
+  inline-size: var(--size);
+}
+
+/* Loading Animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+.fade-out {
+  animation: fadeOut 0.5s ease forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 
