--- a/css/style.css
+++ b/css/style.css
@@ -216,9 +216,9 @@ html.lenis body {
 
 /* Typography for horizontal section */
 .horizontal-container h1 {
-  font-family: "Anton", sans-serif;
+  font-family: "mazius";
   font-size: 10vw;
-  font-weight: 400;
+  font-weight: 700;
   text-transform: uppercase;
   line-height: 1;
   letter-spacing: -2px;
@@ -232,8 +232,8 @@ html.lenis body {
 }
 
 .horizontal-container p {
-  font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-family: "gilroy", sans-serif;
+  font-size: 2rem;
   font-weight: 500;
 }
 
